--- a/Main/Contact/contact.html
+++ b/Main/Contact/contact.html
@@ -9,6 +9,7 @@
             <script src="/Main/mediaqueries.js" type="text/javascript"></script>
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
             <script src="contact.js" type="text/javascript"></script>
+            <script src="/Main/mediaqueries.js" type="text/javascript"></script>
             <title>Mythical Beast Profiler</title>
             <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
         </head>
