--- a/Main/Searchunicorn/loader/loader.html
+++ b/Main/Searchunicorn/loader/loader.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Main/styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="loader.css">
-    <script src="/Main/mediaqueries.js" type="text/javascript"></script>
+    <script src="../../mediaqueries.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
 </head>
@@ -14,11 +14,10 @@
         <header>
             <h1>Mythical Beast Profiler</h1>
             <div class="topnav">
-                <a href="/Main/index.html">Home</a>
-                <a href="/Main/News/news.html">News</a>
-                <a href="/Main/Contact/contact.html">Contact</a>
-                <a href="/Main/Searchunicorn/searchUnicorn.html">Search Unicorn</a>
-                <a href="/Main/Spottedunicorn/spottedUnicorn.html">Spotted Unicorns</a>
+                <a href="../../index.html">Home</a>
+                <a href="../../Contact/contact.html">Contact</a>
+                <a href="../../Searchunicorn/searchUnicorn.html">Search Unicorn</a>
+                <a href="../../Spottedunicorn/spottedUnicorn.html">Spotted Unicorns</a>
                 <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                     <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                 </a>
@@ -27,8 +26,8 @@
                 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             </div>
-            <img src="/Main/PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
-            <img src="/Main/PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
+            <img src="../../PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
+            <img src="../../PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
         </header>
         <main>
         </main>
@@ -36,9 +35,8 @@
             <div id="container"> 
                 <div class="topnav">
                     <h4>About</h4>
-                    <a href="about.html">Om Mythical Beast Profiler</a>
-                    <a href="/Main/Contact/contact.html">Kontakta oss</a>
-                    <a href="/Main/Spottedunicorn/spottedUnicorn.html">Inspiration</a>
+                    <a href="../../Contact/contact.html">Kontakta oss</a>
+                    <a href="../../Spottedunicorn/spottedUnicorn.html">Inspiration</a>
                     <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                         <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                     </a>
