--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.html
@@ -3,25 +3,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Main/styles.css">
+    <link rel="stylesheet" href="../../styles.css">
     <link rel="stylesheet" href="specificUnicorn.css">
-    <link rel="stylesheet" href="/Main/Searchunicorn/Loader/loader.css">
+    <link rel="stylesheet" href="../../Searchunicorn/Loader/loader.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="specificUnicorn.js" type="text/javascript"></script>
-    <script src="/Main/mediaqueries.js" type="text/javascript"></script>
+    <script src="../../mediaqueries.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
 </head>
 <body>
     <div id="wrapper">
         <header>
-            <img id="logo" src="/Main/MBP-logo.svg">
+            <img id="logo" src="../../MBP-logo.svg">
             <div class="topnav">
-                <a href="/Main/index.html">Start</a>
-                <a href="/Main/News/news.html">Nyheter</a>
-                <a href="/Main/Contact/contact.html">Kontakt</a>
-                <a href="/Main/Searchunicorn/searchUnicorn.html">Sök enhörning</a>
-                <a href="/Main/Spottedunicorn/spottedUnicorn.html">Upptäckta enhörningar</a>
+                <a href="../../index.html">Start</a>
+                <a href="../../Contact/contact.html">Kontakt</a>
+                <a href="../../Searchunicorn/searchUnicorn.html">Sök enhörning</a>
+                <a href="../../Spottedunicorn/spottedUnicorn.html">Upptäckta enhörningar</a>
                 <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                     <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                 </a>
@@ -30,8 +29,8 @@
                 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             </div>
-            <img src="/Main/PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
-            <img src="/Main/PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
+            <img src="../../PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
+            <img src="../../PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
         </header>
         <main>
             <div id="cont" class="container">
@@ -60,8 +59,8 @@
             <div id="container">     
                 <div class="topnav">
                     <h4>Om</h4>
-                    <a href="/Main/Contact/contact.html">Kontakta oss</a>
-                    <a href="/Main/Spottedunicorn/spottedUnicorn.html">Inspiration</a>
+                    <a href="../../Contact/contact.html">Kontakta oss</a>
+                    <a href="../../Spottedunicorn/spottedUnicorn.html">Inspiration</a>
                     <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                         <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                     </a>
