--- a/Main/index.html
+++ b/Main/index.html
@@ -4,22 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="index.js" type="text/javascript"></script>
-    <script src="/Main/mediaqueries.js" type="text/javascript"></script>
+    <script src="./index.js" type="text/javascript"></script>
+    <script src="./mediaqueries.js" type="text/javascript"></script>
     <title>Mythical Beast Profiler</title>
     <style> @import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap'); </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div id="wrapper">
         <header>
-            <img id="logo" src="/Main/MBP-logo.svg">
+            <img id="logo" src="./MBP-logo.svg">
             <div class="topnav">
-                <a href="index.html">Start</a>
-                <a href="News/news.html">Nyheter</a>
-                <a href="Contact/contact.html">Kontakt</a>
-                <a href="Searchunicorn/searchUnicorn.html">Sök enhörning</a>
-                <a href="Spottedunicorn/spottedUnicorn.html">Upptäckta enhörningar</a>
+                <a href="./index.html">Start</a>
+                <a href="./Contact/contact.html">Kontakt</a>
+                <a href="./Searchunicorn/searchUnicorn.html">Sök enhörning</a>
+                <a href="./Spottedunicorn/spottedUnicorn.html">Upptäckta enhörningar</a>
                 <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                     <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                 </a>
@@ -28,8 +27,8 @@
                 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
                 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             </div>
-            <img src="/Main/PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
-            <img src="/Main/PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
+            <img src="./PNG/menu-icon.png" alt="hamburger-menu" class="hamburger-menu">
+            <img src="./PNG/cross-icon.png" alt="cross-icon" class="cross-icon">
         </header>
         <main>
             <div class="välkommen">
@@ -37,7 +36,7 @@
                 <p>Här kan du skumma igenom våra fantastiska enhörningar och glömma bort tiden!</p>
                 <p>Har du kanske sett en enhörning vandra på savannen, rånat en bank eller flugit högt bland molnen. Beskriv det du sett i vår sökfunktion och ta reda på vilken av världens alla enhörningar du såg!</p>
                 <form target="_parent">
-                    <button type="submit" class="btn btn-primary" formaction="/Main/Searchunicorn/searchUnicorn.html">
+                    <button type="submit" class="btn btn-primary" formaction="./Searchunicorn/searchUnicorn.html">
                         Sök
                     </button>
                 </form>
@@ -48,8 +47,8 @@
             <div id="container">  
                 <div class="topnav">
                     <h4>Om</h4>
-                    <a href="/Main/Contact/contact.html">Kontakta oss</a>
-                    <a href="/Main/Spottedunicorn/spottedUnicorn.html">Inspiration</a>
+                    <a href="./Contact/contact.html">Kontakta oss</a>
+                    <a href="./Spottedunicorn/spottedUnicorn.html">Inspiration</a>
                     <a class="social" href="https://www.instagram.com/mythicalbeastprofiler/" target="_blank">
                         <ion-icon class="instagram" name="logo-instagram"></ion-icon>
                     </a>
